--- a/api-reference/matchers-and-actions/argument-matchers.mdx
+++ b/api-reference/matchers-and-actions/argument-matchers.mdx
@@ -1,244 +1,280 @@
 ---
-title: "Matchers: Verifying Arguments"
-description: "Reference for built-in and custom matchers to validate arguments passed to mocked methods. Explains syntax, composition, negation, and best practices for robust test conditions. Shows how to extend the matcher system for custom needs."
+title: "Argument Matchers"
+description: "API documentation for standard and advanced argument matchers (such as Eq, Lt, Contains, Not, and custom matchers), used in assertions or when setting up mock expectations. Covers matcher composition and performance considerations."
 ---
 
-# Matchers: Verifying Arguments
+# Argument Matchers
 
-Matchers in GoogleMock are powerful tools to verify the arguments passed to mocked methods. They serve as predicates, allowing you to specify how strict or flexible your argument validation should be. This reference covers the use of built-in matchers, their composition, negation, and guidance for writing custom matchers, empowering you to write expressive and robust tests.
+Argument matchers are a core feature in GoogleMock for specifying flexible and precise criteria to match function arguments when setting expectations or writing assertions. They help you express intent clearly, improve test robustness, and diagnose failures with insightful messages.
+
+This document describes standard, advanced, and custom argument matchers, how to compose them, and key considerations for effective usage.
 
 ---
 
-## Why Use Matchers?
+## Overview
 
-When setting expectations on mock methods, confirming the exact arguments passed ensures your code interacts with dependencies as intended. Matchers help you express those constraints in expressive and readable ways, avoiding over-specification while verifying essential behaviors.
+An **argument matcher** is a predicate-like entity that determines whether a given function argument satisfies a condition. Matchers are used inside `EXPECT_CALL()`, `ON_CALL()` macros to specify what argument values are expected, and in assertions such as `ASSERT_THAT()` and `EXPECT_THAT()` to verify test values.
 
+- Use `_` as the wildcard matcher to accept any argument.
+- Values like `42` implicitly create an `Eq(42)` matcher.
+- You can combine simple matchers logically to create complex conditions.
 
-## Basic Usage of Matchers
-
-Matchers can be used wherever you specify function arguments in `EXPECT_CALL()` or `ON_CALL()`. For example:
-
-```cpp
-// Expects the turtle to move forward by exactly 100 units.
-EXPECT_CALL(turtle, Forward(100));
-```
-
-If you want to accept any argument for a parameter without restriction, use the wildcard matcher `_`:
+Example:
 
 ```cpp
 using ::testing::_;
-
-// Expects a jump to some point having x coordinate 50 and any y coordinate.
-EXPECT_CALL(turtle, GoTo(50, _));
-```
-
-Literal values like `100` or `50` are implicitly converted to equality matchers (`Eq`), so you do not have to wrap them explicitly.
-
-
-## Built-in Matchers
-
-GoogleMock includes a rich set of built-in matchers for many types and scenarios. Some commonly used matchers include:
-
-- `_` : Matches any argument.
-- `Eq(value)` : Matches arguments equal to `value`.
-- `Ne(value)` : Matches arguments not equal to `value`.
-- `Lt(value)`, `Le(value)`, `Gt(value)`, `Ge(value)` : Match less than, less or equal, greater than, and greater or equal respectively.
-- `Not(matcher)` : Negates the specified matcher.
-- `Contains(substring)` : For strings or containers, matches if it contains a given element or substring.
-- `StartsWith(prefix)`, `EndsWith(suffix)` : Match string beginnings or endings.
-- `IsNull()`, `NotNull()` : Match pointer values that are `NULL` or not.
-- `Pointee(matcher)` : Matches pointers whose pointee satisfies `matcher`.
-- `Field(&Class::field, matcher)`, `Property(&Class::prop, matcher)` : Match specific fields or properties of objects.
-
-Example:
-
-```cpp
-EXPECT_CALL(foo, ProcessData(Ge(0), _));  // First arg >= 0, second arg anything
-EXPECT_CALL(logger, Log(StartsWith("Error")));  // Message starts with "Error"
-EXPECT_CALL(db, GetUser(_)).WillOnce(Return(nullptr));  // Return nullptr
-```
-
-
-## Combining Matchers
-
-Matchers can be composed logically to build more complex conditions:
-
-- `AllOf(m1, m2, ...)` : Matches if all provided matchers match.
-- `AnyOf(m1, m2, ...)` : Matches if any one matcher matches.
-- `Not(m)` : Matches if matcher `m` does not match.
-
-Example:
-
-```cpp
-using ::testing::AllOf;
-using ::testing::AnyOf;
-
-// Matches x where x >= 5 and x != 10.
-EXPECT_CALL(foo, Bar(AllOf(Ge(5), Ne(10))));
-
-// First argument must be "foo" or "bar".
-EXPECT_CALL(foo, Baz(AnyOf(Eq("foo"), Eq("bar"))));
-```
-
-
-## Parameterized Matchers
-
-You can create parameterized matchers with custom logic for more specific scenarios. For instance:
-
-```cpp
-MATCHER_P(IsDivisibleBy, divisor, "is divisible by " + ::testing::PrintToString(divisor)) {
-  return (arg % divisor) == 0;
-}
-
-EXPECT_CALL(mock, Compute(IsDivisibleBy(7)));
-```
-
-
-## Common Matcher Constructs
-
-### Wildcard Matcher `_`
-
-Matches anything without restriction.
-
-### Literal Values
-
-Literals (integers, strings, enums) are implicitly converted to equality matchers.
-
-### Ref Matcher
-
-Matches a reference to a specific variable. For example,
-
-```cpp
-int n = 5;
-EXPECT_CALL(mock, Foo(Ref(n))); // Matches argument that is reference to n
-```
-
-
-## Matching Argument Tuples as a Whole
-
-Matchers can be applied to tuples of arguments for complex relational checks across parameters. This is done via `.With()` clauses in `EXPECT_CALL` or `ON_CALL`:
-
-```cpp
-EXPECT_CALL(mock, Foo(_, _)).With(Lt());  // first argument less than second
-```
-
-This requires use of matchers supporting tuple matching like `Lt()` that work on pairs.
-
-
-## Matchers for Containers
-
-You can validate container contents using matchers:
-
-- `ElementsAre(...)` : Matches containers with exactly the provided elements in order.
-- `UnorderedElementsAre(...)` : Matches containers with exactly those elements in any order.
-- `Contains(matcher)` : Matches containers that contain at least one element satisfying the matcher.
-- `Each(matcher)` : Matches containers where every element satisfies the matcher.
-
-Example:
-
-```cpp
-EXPECT_CALL(mock, ProcessVector(ElementsAre(1, Gt(5), _)));  // Vector of 3 elements
-EXPECT_CALL(mock, AcceptSet(UnorderedElementsAre(1, 2, 3)));  // Unordered set
-```
-
-Use `Key(matcher)` and `Pair(key_matcher, value_matcher)` to match map keys and entries.
-
-
-## Handling Overloaded Methods
-
-If methods in your mock are overloaded, you must help resolve the ambiguity by specifying parameter matchers or using cast helpers for const and non-const versions.
-
-Example:
-
-```cpp
-EXPECT_CALL(mock, GetBar()).WillOnce(ReturnRef(bar1));
-EXPECT_CALL(Const(mock), GetBar()).WillOnce(ReturnRef(bar2));
-```
-
-
-## Safe Matcher Casts
-
-Sometimes you need to cast matchers between related types carefully to prevent errors:
-
-```cpp
-EXPECT_CALL(foo, Bar(SafeMatcherCast<Derived*>(base_matcher)));
-```
-
-This ensures type-safe conversions of matchers.
-
-
-## Best Practices
-
-- Favor `ON_CALL()` for specifying default behaviors without implying call expectations. Use `EXPECT_CALL()` when you want to verify calls.
-- Limit use of strict cardinalities to necessary cases; overly restrictive expectations cause brittle tests.
-- Suppress uninteresting call warnings with `NiceMock` if they obscure your test's meaning.
-- Group related calls in sequences (`InSequence`) to enforce call order when needed.
-- Use parameterized and composite matchers to reduce error-prone exact matching.
-- Avoid over-specifying argument validation; be as flexible as the test needs.
-
-
-## Extending with Custom Matchers
-
-You can define your own custom matchers for specialized validation scenarios in three main ways:
-
-1. **Using `MATCHER` macros** for quick inline matchers:
-
-```cpp
-MATCHER(IsEven, "is even") {
-  return (arg % 2) == 0;
-}
-```
-
-2. **Implementing matcher interface classes** for detailed control and reusable polymorphic matchers.
-
-3. **Composing existing matchers** using logical combinators (`AllOf`, `AnyOf`, `Not`).
-
-Refer to the [Writing Custom Assertions and Matchers Guide](https://google.github.io/googletest/guides/advanced.html#writing-custom-assertions-and-matchers) for detailed recipes.
-
-
-## Sample Matcher Usage Example
-
-```cpp
-class MockFoo {
- public:
-  MOCK_METHOD(int, Compute, (int x, int y), (override));
-};
-
-using ::testing::AllOf;
-using ::testing::Gt;
-using ::testing::Ne;
-using ::testing::_;
+using ::testing::Ge;
 using ::testing::Return;
+...
+EXPECT_CALL(foo, Bar(Ge(5), _))  // Expects Bar() called with first arg >= 5, any second arg.
+    .WillOnce(Return(true));
+```
 
-TEST(FooTest, MatcherExample) {
-  MockFoo mock;
+---
 
-  EXPECT_CALL(mock, Compute(AllOf(Gt(0), Ne(42)), _))
-      .WillOnce(Return(100));
+## Standard Matchers
 
-  int result = mock.Compute(10, 5);  // Expected call matches predicate.
-  EXPECT_EQ(result, 100);
+### Wildcards
+
+| Matcher               | Description                                |
+|----------------------|--------------------------------------------|
+| `_`                  | Matches any value of the expected type.   |
+| `A<type>()` or `An<type>()` | Matches any value of a specific `type`.  |
+
+### Generic Comparisons
+
+| Matcher        | Description                                  |
+|----------------|----------------------------------------------|
+| `Eq(value)` or just `value`  | Matches values equal to `value` (`operator==`). |
+| `Ne(value)`    | Not equal to `value`.                        |
+| `Ge(value)`    | Greater or equal to `value`.                 |
+| `Gt(value)`    | Greater than `value`.                        |
+| `Le(value)`    | Less or equal to `value`.                    |
+| `Lt(value)`    | Less than `value`.                           |
+| `IsTrue()`     | Matches if argument is `true` in Boolean context. |
+| `IsFalse()`    | Matches if argument is `false` in Boolean context. |
+| `IsNull()`     | Matches any null pointer (`NULL`, `nullptr`) including smart pointers. |
+| `NotNull()`    | Matches non-null pointers.                    |
+| `Optional(m)`  | Matches non-empty optionals where contained value matches `m`. |
+| `VariantWith<T>(m)` | Matches `std::variant` holding type `T` and matching value `m`. |
+| `Ref(variable)`| Matches arguments that are references to `variable`. |
+| `TypedEq<type>(value)` | Matches argument of type `type` equal to `value` (useful for overloaded methods). |
+
+### Floating Point Matchers
+
+| Matcher                         | Description                                    |
+|---------------------------------|------------------------------------------------|
+| `DoubleEq(value)`               | Matches `double` approximately equal to `value` (NaNs considered unequal).|
+| `NanSensitiveDoubleEq(value)`   | Matches `double` approximately equal including NaNs as equal.            |
+| `DoubleNear(value, max_abs_error)` | Matches `double` close to `value` within `max_abs_error`, NaNs unequal. |
+| `NanSensitiveDoubleNear(value, max_abs_error)` | Matches `double` close to `value` within error, NaNs equal.          |
+| `FloatEq`, `NanSensitiveFloatEq`, `FloatNear`, `NanSensitiveFloatNear` | Same as above but for `float` types.                                    |
+| `IsNan()`                      | Matches any floating point NaN value.           |
+
+---
+
+## String Matchers
+
+| Matcher                   | Description                                  |
+|---------------------------|----------------------------------------------|
+| `StrEq(string)`           | String equals `string` (case-sensitive).    |
+| `StrNe(string)`           | String not equal to `string`.                 |
+| `StrCaseEq(string)`       | String equals ignoring case.                  |
+| `StrCaseNe(string)`       | String not equal ignoring case.               |
+| `HasSubstr(string)`       | String contains substring.                    |
+| `StartsWith(prefix)`      | String starts with `prefix`.                   |
+| `EndsWith(suffix)`        | String ends with `suffix`.                      |
+| `ContainsRegex(re)`       | String matches regex anywhere.                |
+| `MatchesRegex(re)`        | String matches regex exactly (full match).   |
+| `IsEmpty()`               | String is empty.                              |
+| `WhenBase64Unescaped(m)` | Matches base64-encoded string whose unescaped content matches `m`. |
+
+---
+
+## Container Matchers
+
+Matcher able to check container contents, element order, and element types:
+
+| Matcher                                    | Description                                    |
+|--------------------------------------------|------------------------------------------------|
+| `Contains(element_matcher)`                 | Container contains at least one matching element. |
+| `Contains(element_matcher).Times(n)`        | Container contains exactly `n` elements that match. |
+| `Each(element_matcher)`                      | All elements in container match.                |
+| `ElementsAre(m1, m2, ...)`                   | Container has exactly these elements, in order. |
+| `ElementsAreArray({m...})` or iterator range| Same as ElementsAre, but from an array or container. |
+| `UnorderedElementsAre(m1, m2, ...)`         | Container has exactly these elements, any order. |
+| `UnorderedElementsAreArray({m...})`         | Same as UnorderedElementsAre but from array or container. |
+| `IsEmpty()`                                 | Container is empty.                              |
+| `SizeIs(matcher)`                          | Container size matches `matcher`.                |
+| `BeginEndDistanceIs(matcher)`              | Distance between `begin()` and `end()` matches `matcher`. |
+| `ContainerEq(container)`                    | Strict equality with detailed mismatch info.   |
+| `IsSupersetOf({m...})`, `IsSubsetOf({m...})` | Partial set matching superset/subset relations. |
+| `Pointwise(tuple_matcher, container)`       | Elementwise matching with a tuple matcher.      |
+| `UnorderedPointwise(tuple_matcher, container)` | Elementwise matching ignoring order.           |
+| `WhenSorted(matcher)`                       | Container sorted with `<` matches `matcher`.    |
+| `WhenSortedBy(comparator, matcher)`         | Container sorted by custom comparator matches `matcher`. |
+
+---
+
+## Member Matchers
+
+Special purpose matchers to validate object members or properties:
+
+| Matcher                                  | Description                                    |
+|------------------------------------------|------------------------------------------------|
+| `Field(&Class::field, matcher)`          | Matches object whose `field` matches matcher. Supports pointers (dereferences). |
+| `Field(field_name, &Class::field, matcher)` | Same as above with name for better diagnostics. |
+| `Property(&Class::method, matcher)`      | Matches object whose method (getter) returns value matching matcher. |
+| `Property(property_name, &Class::method, matcher)` | Same with property name for better diagnostics.
+
+**Warning:** Avoid `Property()` on member functions you don’t own, as function addresses aren’t guaranteed stable.
+
+---
+
+## Composite Matchers
+
+Want complex conditions that combine matchers? Use:
+
+| Matcher                      | Description                                 |
+|------------------------------|---------------------------------------------|
+| `AllOf(m1, m2, ...)`          | Matches if all `m_i` match.                  |
+| `AnyOf(m1, m2, ...)`          | Matches if any one `m_i` match.               |
+| `Not(matcher)`                | Negates the matcher.                        |
+| `Conditional(cond, m1, m2)`  | Matches `m1` if `cond` true, otherwise `m2`.|
+| `Args<N1, N2, ...>(matcher)` | Matches selected arguments as a tuple.      |
+| `AllArgs(matcher)`            | Matches all arguments as tuple (alias).     |
+
+You can compose matchers to build readable and precise predicates for complex argument matching scenarios.
+
+---
+
+## Using Matchers as Predicates
+
+Matchers can act like predicates (functions returning bool) when used with algorithms or callbacks. For example:
+
+```cpp
+using ::testing::Matches;
+using ::testing::Ge;
+std::vector<int> values = {1, 5, 10};
+int count = std::count_if(values.begin(), values.end(), Matches(Ge(5)));
+```
+
+This counts elements greater or equal to 5.
+
+---
+
+## Defining Custom Matchers
+
+GoogleMock provides a convenient macro and interface for creating your own matchers:
+
+### Using `MATCHER`
+
+Simplest way to create a matcher:
+
+```cpp
+MATCHER(IsDivisibleBy7, "") {
+  return (arg % 7) == 0;
 }
 ```
 
+Use as:
+
+```cpp
+EXPECT_CALL(mock_obj, Foo(IsDivisibleBy7()));
+```
+
+Add detailed descriptions and streaming to `result_listener` to improve diagnostics.
+
+### Parameterized Matchers Using `MATCHER_P` and Variants
+
+```cpp
+MATCHER_P(HasAbsoluteValue, value, "") {
+  return abs(arg) == value;
+}
+```
+
+Use it like:
+
+```cpp
+EXPECT_THAT(x, HasAbsoluteValue(10));
+```
+
+You can define up to 10 parameters with `MATCHER_Pk`.
+
+### Implementing Matcher Interface
+
+For advanced use, implement `bool MatchAndExplain(const T& arg, MatchResultListener*)`, and description methods. Take care to keep your matcher functional and pure.
+
+---
+
+## Performance and Best Practices
+
+- Use matchers to avoid overspecification of arguments, which leads to brittle tests.
+- Prefer `_` to match "any" when argument specifics don't matter.
+- Try to minimize complex matcher nesting when possible for readability.
+- Use `SafeMatcherCast<T>(m)` to resolve type mismatches safely.
+- Avoid side effects inside matcher code.
+- Choose between `ON_CALL()` and `EXPECT_CALL()` wisely: `ON_CALL` sets default behaviour without expectation, `EXPECT_CALL` sets an actual expected call.
+- When using matchers with move-only types or non-copyable objects, consider parameter binding techniques or ref wrapping.
+
+---
 
 ## Troubleshooting Matcher Usage
 
-- **Ambiguous overloads**: Always specify parameter matchers explicitly with overloaded methods to avoid compiler errors.
-- **Side effects in matchers**: Matchers must be pure and free of side effects; avoid calling mock methods within matchers.
-- **Default behaviors**: If your mock returns unexpected default values, explicitly use `ON_CALL()` or set default `DefaultValue<T>`s.
-- **Unexpected call failures**: Use `EXPECT_CALL()` to restrict expected calls; unexpected calls cause test failures.
-
-
-## Related Topics
-
-- [Mocking Reference](reference/mocking.md): Defines how mock classes and macros work.
-- [Mocking API: EXPECT_CALL and ON_CALL](reference/mocking-api/call-expectations.md): Details call expectations and default behaviors.
-- [Actions Reference](reference/actions.md): How to define mock behaviors.
-- [Cardinalities: Controlling Call Counts](reference/mocking-api/cardinalities.md): To manage how many times calls are expected.
-- [gMock Cookbook](gmock_cook_book.md): Extensive recipes for mocking scenarios.
-
+- Use the `--gmock_verbose=info` flag to see matcher evaluation traces.
+- Use precise matchers to isolate argument mismatches.
+- Remember matcher evaluation may happen multiple times; avoid side effects.
+- Wrap non-copyable types in `std::ref()` if you want to match their references.
 
 ---
 
-_For detailed descriptions of built-in matchers and how to craft custom ones, refer to the [Matchers Reference](reference/matchers.md) in the API docs._
+## Summary
+
+Argument matchers provide expressive power to GoogleMock tests allowing precise, flexible, and readable argument verification. They range from simple wildcards and basic comparisons to complex composite and custom matchers.
+
+Tap into built-in matchers, combine them logically, and define your own tailored matchers to perfectly capture what your tests need.
+
+---
+
+## Additional Resources and References
+
+- [Matchers Reference](reference/matchers.md) - Complete list of built-in matchers
+- [gMock Cookbook - New Matchers](docs/gmock_cook_book.md#NewMatchers) - Recipes for defining new matchers
+- [Using Matchers in Expectations (EXPECT_CALL, ON_CALL)](api-reference/mocking-apis/expect-call-and-on-call.mdx)
+- [Mock Actions](api-reference/matchers-and-actions/mock-actions.mdx) - What to do when a matcher matches
+- [Mocking Reference](docs/reference/mocking.md) - Low-level mocking constructs
+- [gMock for Dummies](docs/gmock_for_dummies.md) - Getting started with mocks
+
+---
+
+### Code Example: Complex Matcher Use
+
+```cpp
+using ::testing::AllOf;
+using ::testing::Gt;
+using ::testing::Not;
+using ::testing::HasSubstr;
+using ::testing::_;
+
+EXPECT_CALL(mock_obj, Process(
+    AllOf(Gt(5), Not(10))  // arg 0 must be > 5 and != 10
+));
+
+EXPECT_CALL(mock_obj, SaveRecord(
+    HasSubstr("error")  // arg 1 contains "error"
+));
+
+// Using matcher with Action:
+EXPECT_CALL(mock_obj, Compute(_))
+    .WillOnce(Return(42));
+```
+
+---
+
+**Tip**: Assign complex matcher expressions to variables to reuse and simplify your tests:
+
+```cpp
+Matcher<int> in_range = AllOf(Gt(10), Lt(100));
+EXPECT_CALL(mock_obj, Foo(in_range));
+EXPECT_CALL(mock_obj, Bar(Lt(20), in_range));
+```
